# ING_hubs_predict_default

./: README.md  champion_woe_logistic_regression_markdown.ipynb  data_processing.ipynb  feature_engineering.ipynb  lightgbm_challenger.ipynb  main.py  pyproject.toml
data/: data_quality_by_column.csv  data_quality_summary.json  data_split_assignment.csv  data_split_summary.csv  feature_univariate_stats.csv  high_correlation_pairs.csv  iv_selected_features.csv  optbinning_failed_features.csv  selected_features_for_logit.csv  selected_features_for_logit.json  vif_drop_log.csv  vif_final_table.csv  woe_iv_summary.csv
data/final/: README_outputs_context.md  selected_features_for_logit.csv  selected_features_for_logit.json  vif_drop_log.csv  woe_iv_summary.csv  woe_test_features.csv
data/logs/: vif_final_table.csv
results/LightGBM/: RESULTS_ANALYSIS.md
results/LightGBM/out_of_sample/: lgb_business_insights_out_of_sample.csv  lgb_importance_comparison_out_of_sample.csv  lgb_test_predictions_out_of_sample.csv  lgb_tuning_results_out_of_sample.json
results/LightGBM/out_of_time/: lgb_business_insights_out_of_time.csv  lgb_importance_comparison_out_of_time.csv  lgb_test_predictions_out_of_time.csv  lgb_tuning_results_out_of_time.json
